--- a/src/pages/wallet/wallet.scss
+++ b/src/pages/wallet/wallet.scss
@@ -1,3 +1,13 @@
 page-wallet {
+    .bal{
+        font-size: 72px;
+        font-weight: 900;
+        color: color($colors, primary, base);
+    }
 
+    ion-footer {
+        &.footer-md::before {
+            background-image: none;
+        }
+    }
 }
