--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -25,11 +25,13 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  //primary:    #488aff,
+  primary:#32c2ff,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #424242,
+  transparent: transparent,
 );
 
 
@@ -77,3 +79,11 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
+.centerMe {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  max-width: 480px;
+  text-align: center;
+}
